# shrinkers

./: .gitignore  README.md  pyproject.toml  requirements.txt
shortener/: admin.py  forms.py  model_utils.py  models.py  utils.py  views.py
shortener/index/: urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_shortenedurls_shortener_s_prefix_bbcd1e_idx.py  0002_users_full_name.py  0002_users_url_count_alter_shortenedurls_prefix.py  0003_shortenedurls.py  0003_shortenedurls_click_statistic.py  0004_statistic_custom_params_trackingparams.py
shortener/templatetags/: custom_tags.py
shortener/urls/: apis.py  serializers.py  urls.py  views.py
shrinkers/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  boards.html  login.html  register.html  url_create.html  url_list.html
templates/includes/: nav.html  top_nav.html
