[tool.poetry]
name = "shrinkers"
version = "0.1.0"
description = ""
authors = ["yjinjo <yjinjo@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
python-dotenv = "1.0"
appdirs = "1.4.4"
asgiref = "3.6.0"
click = "8.1.3"
django-debug-toolbar = "4.0.0"
django-ninja = "0.21.0"
djangorestframework = "3.14.0"
mypy-extensions = "1.0.0"
pathspec = "0.11.1"
pydantic = "1.10.7"
pytz = "2023.3"
regex = "2023.3.23"
sqlparse = "0.4.4"
toml = "0.10.2"
typing-extensions = "4.5.0"
django-seed = "0.3.1"
Faker = "18.5.1"
python-dateutil = "2.8.2"
six = "1.16.0"
text-unidecode = "1.3"
psycopg2 = "2.9.6"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
